[FEATURE] https://projekte.in2code.de/issues/26596 Move loading wheel to the top of the container (to be better visible)

--- a/Resources/Private/Sass/_general.scss
+++ b/Resources/Private/Sass/_general.scss
@@ -9,19 +9,22 @@
   //
 
   &__loading {
+    position: relative;
+
     > * {
       opacity: 0.1;
     }
-    &:after {
+
+    &::after {
       content: '';
       opacity: 1;
       position: absolute;
-      top: 0;
+      top: 5%;
       left: 0;
       right: 0;
       bottom: 0;
       display: block;
-      background: url($iconPath + 'loading.gif') no-repeat center;
+      background: url($iconPath + 'loading.gif') no-repeat top center;
     }
   }
 
